--- a/sampleapp/app/src/main/res/values/strings.xml
+++ b/sampleapp/app/src/main/res/values/strings.xml
@@ -91,4 +91,8 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="fab_content_description">Floating action button</string>
+
+    <string name="add_new_todo_item">Add new todo item</string>
+    <string name="add_new_item_button_label">Add new</string>
+    <string name="add_new_todo_item_hint">What is your task?</string>
 </resources>
