--- a/sampleapp/app/src/main/res/values/strings.xml
+++ b/sampleapp/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">ToDo List App</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="menu_action_about">About</string>
     <string name="fab_content_description">Floating action button</string>
 
     <string name="add_new_todo_item">Add new todo item</string>
     <string name="add_new_item_button_label">Add new</string>
     <string name="add_new_todo_item_hint">What is your task?</string>
+    <string name="about_header">Author: Jakub Szostakowski</string>
+    <string name="about_year">2021</string>
 </resources>
