--- a/sampleapp/app/src/main/res/values/strings.xml
+++ b/sampleapp/app/src/main/res/values/strings.xml
@@ -12,6 +12,6 @@
     <string name="about_header">Author: Jakub Szostakowski</string>
     <string name="about_year">2021</string>
 
-    <string name="removed_item_undo_header">Item removed</string>
-    <string name="removed_item_undo_button_label">Undo</string>
+    <string name="deleted_item_undo_header">Item deleted</string>
+    <string name="deleted_item_undo_button_label">Undo</string>
 </resources>
